# BDNS

./: .env.development  .gitignore  alembic.ini  requirements.txt  server.py
ETL/: etl_utils.py  orchestrator_convocatorias.py  run_etl.py
ETL/catalogs/: ETL_Catalogos.py
ETL/control/: convocatoria_2017.csv  convocatoria_2020.csv  convocatoria_2021.csv  convocatoria_2024.csv
ETL/convocatorias/: ETL_Convocatorias.py  extract_and_transform_convocatorias.py  extract_jsons_detallados.py  poblar_convocatorias_detalle.py
ETL/scripts/: create_etl_user.py
ETL/sync/: __init__.py  detect_changes.py
alembic/: env.py
alembic/versions/: 6a8ef7ad819c_inicial.py  6ce38c918174_pseudonimo_refactoring.py  add_etl_user_and_audit_fields.py  b2c3d4e5f6g7_add_estadisticas_table.py  c3d4e5f6g7h8_add_estadisticas_triggers.py  d4e5f6g7h8i9_add_sync_control_table.py  e5f6g7h8i9j0_add_notifications_tables.py
app/db/: models.py  session.py
apps/backend/: main.py  (+2 more)
apps/frontend/: .env.example  package.json  pyproject.toml  vite.config.js
apps/frontend/src/: App.vue  style.css
apps/frontend/src/components/: Dashboard-2.vue
apps/frontend/src/services/: graphql.js
apps/frontend/src/utils/: regions.js
bdns_core/: __init__.py
bdns_frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
control/: convocatoria_2021.csv  convocatoria_2021_A.csv  convocatoria_2021_C.csv  convocatoria_2021_L.csv  convocatoria_2021_O.csv  convocatoria_2024.csv
docs/: ESTRATEGIA_ETL.md
telegram_notifications/: api.py
(+178 files in other folders)
